[package]
name = "breathe"
version = "0.2.4"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = [ "attributes", "unstable" ] }
strum = { version = "0.23", features = ["derive"] }
indicatif = "0.16"
dialoguer = "0.9"
structopt = "0.3"
structopt-flags = "0.3"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.5" }
dirs = "4"
num-integer = "0.1"
