[package]
name = "breathe"
version = "0.2.4"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11"
structopt = "0.3"
structopt-flags = "0.3"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.5" }
dirs = "4"
num-integer = "0.1"
timer = "0.2.0"
chrono = "0.4.39"
