[package]
name = "breathe"
version = "0.4.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.27", features = ["derive"] }
indicatif = "0.17"
dialoguer = "0.11"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8" }
dirs = "6"
num-integer = "0.1"
timer = "0.2.0"
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
log = "0.4.25"
anyhow = "1.0.95"
